# DTEK_scraping

dtek_info/: pyproject.toml
dtek_info/dtek_spider/: Scrapy_commands.txt  dtek_scraping_launch.py  scrapy.cfg
dtek_info/dtek_spider/dtek_spider/: items.py  middlewares.py  pipelines.py  settings.py
dtek_info/dtek_spider/dtek_spider/spiders/: dtek_alarm_switch_off.py
